# geogossip

./: .gitignore  Gemfile  README.md  app.rb  geogossip.cabal  index.html
db/: create.sql
js/: main.js
public/: index.html
public/css/: main.css
public/js/: chat.js  chatui.js  main.js
src/: Core.hs  Main.hs
